# securNet

./: .env.example  .gitignore  LICENSE  Makefile  README.md  project_details.md  pyproject.toml
deploy/ec2/: bootstrap.sh  cloudwatch-agent-notes.json  deploy-compose.sh  env.ec2.example  security-observability-platform.service
docs/: alerts.md  architecture.md  aws-comparison.md  dashboards.md  runbook.md
infra/: Dockerfile  docker-compose.yml
infra/alertmanager/: alertmanager.yml
infra/grafana/dashboards/: incident-triage.json  infrastructure.json  security-events.json  service-health.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/loki/: loki-config.yml
infra/prometheus/: alert_rules.yml  prometheus.yml  recording_rules.yml
infra/promtail/: promtail-config.yml
scripts/: __init__.py
scripts/incidents/: __init__.py  auth_latency.py  common.py  container_memory_pressure.py  gateway_token_spike.py  scan_backlog.py  vault_dependency_failure.py
services/: __init__.py
services/api_gateway/: app.py  metrics.py
services/auth_service/: app.py
services/scan_service/: __init__.py  app.py
services/vault_service/: __init__.py  app.py
shared/: app.py  config.py  logging.py  metrics.py  middleware.py
tests/: test_shared_contracts.py
tests/auth_gateway/: test_api_gateway.py  test_auth_service.py
tests/infra/: test_configs.py
tests/vault_scan/: test_scan_service.py  test_vault_service.py
